# IndexOne

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: python-app.yml  rust.yml
app/: Cargo.toml
app/src/: main.py  main.rs  pq.py
app/src/blas_wrapper/: norm.rs
app/src/notebook/: plot_kmeans.ipynb
app/src/openblas_wrapper/: norm2.rs
app/src/ops/: euclidean.rs  mod.rs  random.rs  slice.rs  subtract.rs
app/src/schema/: index.rs  macros.rs  mod.rs  size.rs  tensor.rs  traits.rs
app/src/tensor/: tensor.rs
app/src/tensor_ops/: macros.rs  mod.rs  size.rs  size_tests.rs  tensor.rs  tensor_tests.rs
git-hooks/: pre-commit.py
profiler_stats/: main.pfl
scripts/src/: data_gen.py  distance.py  main.py
scripts/tests/: test_kmeans.py  test_pq.py
src/: data_gen.py  distance.py  kmeans.py  main.py  plot_kmeans.ipynb  pq.py  profiler.py
src/notebook/: perf_pq.ipynb
tensor_lib/: Cargo.toml
tensor_lib/benches/: tensor_lib.rs
tensorlib/: Cargo.toml
tensorlib/benches/: tensorlib.rs
tensorlib/benches/benchmarks/: blas_benchmark.rs  ops_benchmark.rs
tensorlib/benches/docs/: norm2 algorithm.html  subtract algorithm.html
tensorlib/src/advanced_ops/: euclidean.rs  kmeans.rs  mean.rs  mod.rs  variance.rs
tensorlib/src/openblas_wrapper/: min.rs  mod.rs  norm.rs  norm2.rs
tensorlib/src/ops/: assign.rs  concat.rs  convert.rs  divide.rs  equals.rs  flatten.rs  memalloc.rs  mod.rs  random.rs  slice.rs  slicelinear.rs  subtract.rs
tensorlib/src/schema/: index.rs  macros.rs  size.rs  tensor.rs
tests/: test_kmeans.py  test_main.py
(+27 files in other folders)
