[package]
name = "tensorlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.135"
num-traits = "0.2"
rand = "0.8.5"
openblas-src = "0.10.5"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "tensorlib"
harness = false

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
